# Ultrasound-Processor

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cd.yml  ci.yml
apps/: imgui_visualizer.cpp  legacy_capture_convert.cpp  replay_runner.cpp
bindings/: Vector2f.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.hpp  imgui_impl_opengl3_loader.hpp
cmake/: ProjectOptions.cmake
cmake/profiles/: host-debug-vs2022  host-release-vs2022
codex/: ARCHITECTURE.md  BUILD_AND_RUN_VERIFICATION.md  CURRENT_STAGE.md  DD.md  DEPENDENCIES.md  EXTRACTION_PLAN.md  FUNCTIONAL_REQUIREMENTS.md  HLD.md  IMPLEMENTATION_CHECKLIST.md  NON_FUNCTIONAL_REQUIREMENTS.md  RELEASE_READINESS.md  REPOSITORY_STRUCTURE.md  REPO_INVENTORY.md  TARGET_TRACKING_USING_USS_SIGNAL_WAYS.txt  ULTRASOUND_BOUNDARY.md  ULTRASOUND_FILEMAP.md  ULTRASOUND_VISUALIZATION_FILEMAP.md
configs/: default_ultrasound_processor.ini  vehicle_profile_reference.ini
data/: README.md
include/ultrasound/: config.hpp  config_io.hpp  diagnostics.hpp  error.hpp  processor.hpp  replay.hpp  runtime.hpp  types.hpp  vehicle_geometry.hpp  visualizer.hpp
replay/: sample_input.csv
src/core/: processor.cpp
src/io/: config_loader.cpp  replay_source.cpp  runtime_stub.cpp
src/visualization/: imgui_visualizer.cpp
tests/: test_config_loader.cpp  test_processor.cpp  test_replay_source.cpp  test_runtime_stub.cpp
tools/: check_coverage.py
